# Real-Time-Electromagnetic-Railgun-Project

./: .gitignore  CMakeLists.txt  Color segmentation and contour detection.cpp  Electromagnetic Railgun Project0204.pptx  LICENSE  README.md  Real Time Electromagnetic Railgun Project 0206.pptx  Real Time Electromagnetic Railgun Project0205.pptx  THIRD_PARTY_LICENSES.md  duoji.cpp  main.cpp
3d Modle/: 炮台.SLDPRT
Hardware part of test/: schematic and PCB.eprj
docs/: credits.md  end_of_life.md  pitch.pptx  project_log.md  system_architecture.md
src/: CMakeLists.txt  libcam2opencv.cpp  libcam2opencv.h  window.cpp  window.h
src/callback-compliance-coordination/: CMakeLists.txt  PCA9685.cpp  er.txt  libcam2opencv.cpp  libcam2opencv.h  main.cpp  window.cpp  window.h
src/callback-compliance-coordination/1.1/: libcam2opencv.cpp  libcam2opencv.h  main.cpp  qt2.cpp
src/callback-compliance-coordination/ver.1.2/: CMakeLists.txt  PCA9685.h  window.h
src/gui-development/gui1_test/: qt1.cpp
src/gui-development/gui1_test/qt test1.1/: main.cpp  window.cpp
src/gui-development/qt_test3/src/vision-recognition/qtviewer/: CMakeLists.txt  GpioControl.cpp  window.cpp  window.h
src/io-control/: CMakeFile.txt  CMakeList.txt  CMakeLists.txt  cmake.txt  control-test.cpp  relay control 2.0.cpp  switch control 新版.cpp
src/servo-control/Function_test1/: PCA9685.h
src/vision-recognition/: window.cpp  window.h
tests/test1_servo/: CMakeLists.txt  README.md  main.cpp
tests/test2_UI/: README.md
tests/test2_UI/src/vision-recognition/qtviewer/: window.h
tests/test3_io_control/: CMakeLists.txt  main.cpp  readme.md
tests/test4_ServoCam/: PCA9685.cpp  README.md  libcam2opencv.cpp  main.cpp  window.cpp
tests/test5_camera/: CMakeLists1.txt  window.cpp
炮台/: 底座.SLDPRT  激光传感器.SLDPRT  炮管.SLDPRT  装配体1.SLDASM
